<resources>
    <string name="app_name">DCC196Trabalho01</string>
    <string name="hintNome">Nome</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintCPF">CPF</string>
    <string name="hintTitulo">Título</string>
    <string name="hintDataHora">Data/Hora</string>
    <string name="hintFacilitador">Facilitador</string>
    <string name="hintDescricao">Descrição do evento</string>
    <string name="hintTempo">Horário</string>
    <string name="hintData">Data</string>
    <string name="hintLocal">Local</string>
    <string name="hintNumMaxInscritos">Número máximo de inscritos</string>
    <string name="hintDataHora2">Data/hora (dd/mm/aaaa hh:mm)</string>
    <string name="eventosCadastrados">Lista de eventos cadastrados</string>
    <string name="eventosDisponiveis">Lista de eventos disponíveis</string>
    <string name="btnEdtInfo">Editar</string>
</resources>
